Fix Select2 in modal for Firefox

--- a/app/assets/stylesheets/desktop/application.scss
+++ b/app/assets/stylesheets/desktop/application.scss
@@ -4,6 +4,7 @@
 @import './footer/footer';
 @import './layout/fullscreen';
 @import './highcharts';
+@import './select2';
 
 a {
   cursor: pointer;
