Introduce Open category for PPC competitions

--- a/app/views/events/sections/_section_row.html.haml
+++ b/app/views/events/sections/_section_row.html.haml
@@ -1,3 +1,6 @@
+-# Open category (when splitting by categories is disabled) doesn't have id
+- return unless section.id
+
 %tr{id: dom_id(section)}
   %td.event__scoreboard-section{colspan: columns_count}
     %span.section__name= section.name
