created link to full jump in result page

--- a/app/views/events/results/_show_modal.html.haml
+++ b/app/views/events/results/_show_modal.html.haml
@@ -16,6 +16,7 @@
     .modal-body
       .container-fluid
         = render 'events/results/header'
+        = link_to t('activerecord.models.event/full_jump'), track_path(@result.track)
 
         %hr
 
