--- a/app/views/events/show.html+mobile.haml
+++ b/app/views/events/show.html+mobile.haml
@@ -21,4 +21,8 @@
       %span
         = "#{@event.range_from} – #{@event.range_to} #{t('units.m')}"
 
-  = render @scoreboard
+  - if !@event.surprise?
+    = render @scoreboard
+  - else
+    %h1.text-muted.text-center
+      🙅 Let it be Surprise
