--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,6 +64,12 @@ a, button, label, span {
   }
 }
 
+@media print {
+  #wrap {
+    padding: 0;
+  }
+}
+
 label.valid {
   display: none !important;
 }
