--- a/app/views/events/results/_header.html.haml
+++ b/app/views/events/results/_header.html.haml
@@ -1,4 +1,4 @@
 - local ||= false
 
-%ul.nav.nav-pills
+%ul.nav.nav-pills.event-result__navigation
   = render 'events/results/header_items', local: local
