--- a/app/views/events/rounds/maps/_round_map.html.haml
+++ b/app/views/events/rounds/maps/_round_map.html.haml
@@ -11,7 +11,7 @@
   .fullscreen-body{'data-controller': 'events--round-map',
                    'data-url': url_for,
                    'data-dl-start': @event.designated_lane_start,
-                   'data-action': 'maps_api:ready@window->events--round-map#on_maps_ready maps_api:failed@window->events--round-map#on_maps_failed_load'}
+                   'data-action': 'maps_api:ready@window->events--round-map#onMapsReady maps_api:failed@window->events--round-map#onMapsFailedLoad'}
 
     .fullscreen-main-area{'data-controller': 'events--designated-lane',
                           'data-action': 'round-map:show-dl@window->events--designated-lane#show_dl'}
@@ -21,16 +21,13 @@
 
     .fullscreen-sidebar.round-map-sidebar
       .fullscreen-sidebar-container.round-map-competitors
-        .round-map-list-commands
-          %button.btn.btn-sm.btn-default{'data-action': 'click->events--round-map#select_all'}
-            = t('general.select_all')
-          %button.btn.btn-sm.btn-default{'data-action': 'click->events--round-map#unselect_all'}
-            = t('general.unselect_all')
-
-        - @round_map.competitors_by_groups.each_with_index do |group, index|
+        - @round_map.competitors_by_groups.each_with_index do |group, group_index|
           .round-map-group
-            .round-map-group-title{'data-action': 'click->events--round-map#toggle_group'}
-              = "#{t('events.rounds.map.group')} #{index + 1}"
+            .round-map-group-title
+              = "#{t('events.rounds.map.group')} #{group_index + 1}"
+              %span.round-map-group-commands
+                %a{href: '#', 'data-action': 'click->events--round-map#toggleGroup'}
+                  Select
             .round-map-group-list
               - group.each do |competitor_data|
                 .round-map-competitor{'data-controller': 'events--competitor-reference-point',
@@ -39,9 +36,9 @@
                   .round-map-competitor-row
                     %label.round-map-competitor-title
                       %input{type: 'checkbox',
-                             checked: competitor_data.present?,
+                             checked: competitor_data.present? && group_index == 0,
                              'data-competitor-id': competitor_data.competitor_id,
-                             'data-action': 'change->events--round-map#on_change_visibility',
+                             'data-action': 'change->events--round-map#toggleCompetitor',
                              'data-target': 'events--round-map.competitor'}
                       %i.fa.fa-circle{style: "color: #{competitor_data.present? ? competitor_data.color : 'transparent'}"}
                       %span.round-map-competitor-name
