--- a/app/views/tournaments/qualifications/update_scoreboard.js.erb
+++ b/app/views/tournaments/qualifications/update_scoreboard.js.erb
@@ -1,2 +1,2 @@
 $('#modal').modal('hide');
-$('.qualification-table').replaceWith('<%= j render 'tournaments/qualifications/qualification_table' %>');
+$('.scoreboard-table').replaceWith('<%= j render 'tournaments/qualifications/qualification_table' %>');
