Adjust markup for mobile devices

--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -51,13 +51,13 @@
 }
 
 .gold {
-  color: #D9D919;
+  color: $gold;
 }
 
 .silver {
-  color: silver;
+  color: $silver;
 }
 
 .bronze {
-  color: #CD7F32;
+  color: $bronze;
 }
