--- a/app/assets/stylesheets/mobile/application.scss
+++ b/app/assets/stylesheets/mobile/application.scss
@@ -20,6 +20,7 @@
 @import '../events/**/*';
 @import '../tracks/**/*';
 @import '../places/**/*';
+@import '../scoreboards';
 
 @import 'variables';
 @import '**/*';
