--- a/app/assets/stylesheets/_tournaments.scss
+++ b/app/assets/stylesheets/_tournaments.scss
@@ -1,10 +1,13 @@
 .tournament-match {
   box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px 0px, rgba(0, 0, 0, 0.117647) 0px 1px 6px 0px;
+  border-radius: 4px;
   border-width: 0px;
+  margin: 10px 0;
+  padding: 10px;
 }
 
 .tournament-match-map {
-  margin-right: 10px;
+  margin-left: 10px;
   font-size: 11px;
   cursor: pointer;
 }
@@ -14,17 +17,35 @@
 }
 
 .tournament-spacer {
-  height: 46px;
+  height: 56.5px;
+}
+
+.tournament-match-links {
+  font: 14px / 18px $pn-regular, $fallback-fonts;
+  text-align: right;
 }
 
 .tournament-competitor {
-  margin-bottom: 8px;
+  display: flex;
+
+  a {
+    color: $light-text-color;
+  }
 }
 
-.tournament-competitor a {
-  color: rgb(51, 51, 51);
-  border-bottom-style: dotted;
-  border-bottom-width: 1.1px;
+.tournament-competitor-profile {
+  flex-grow: 1;
+  overflow: hidden;
+  text-align: left;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
+  img {
+    height: 22px;
+    width: 22px;
+    border-radius: 100%;
+    margin: 5px;
+  }
 }
 
 .tournament-competitor a:hover {
@@ -32,9 +53,10 @@
   text-decoration: none;
 }
 
-.competitors-container {
-  padding-bottom: 7px;
-  padding-top: 2px;
+.tournament-competitor-result {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 #match-map {
