--- a/app/views/tournaments/_tournament.html+mobile.haml
+++ b/app/views/tournaments/_tournament.html+mobile.haml
@@ -8,7 +8,7 @@
     .events-list__item-content
       .events-list__item-title= tournament.name
       - if tournament.place.present?
-        .events-list__item-place
+        .event__place
           %i.fa.fa-map-marker-alt
           = tournament.place.name
           %span= tournament.place.country_code
