--- a/app/views/virtual_competitions/show.html.haml
+++ b/app/views/virtual_competitions/show.html.haml
@@ -16,7 +16,7 @@
     - else
       = t('virtual_competitions.worldwide')
 
-  %div= competition_suit
+  %div= competition_suit(@competition)
   %div= competition_task(@competition)
 
   = render 'navbar'
