--- a/app/views/events/update_scoreboard.js.erb
+++ b/app/views/events/update_scoreboard.js.erb
@@ -1,2 +1,2 @@
 $('#modal').modal('hide');
-$('.event__scoreboard').replaceWith("<%= j render @scoreboard %>");
+$('.scoreboard').replaceWith("<%= j render @scoreboard %>");
