--- a/app/views/users/passwords/new.html.haml
+++ b/app/views/users/passwords/new.html.haml
@@ -2,7 +2,7 @@
   .page-header
     %h2= t('devise.passwords.new.forgot_your_password')
 
-  = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'form-horizontal' }) do |f|
+  = form_for(:user, url: user_password_path, html: { method: :post, class: 'form-horizontal' }) do |f|
     = devise_error_messages!
 
     .form-group
