--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -40,7 +40,7 @@
 
         %br
 
-        = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'form-horizontal' }) do |f|
+        = form_for(:user, url: user_registration_path, html: { method: :put, class: 'form-horizontal' }) do |f|
           = devise_error_messages!
 
           .form-group
