--- a/app/views/users/shared/_links.haml
+++ b/app/views/users/shared/_links.haml
@@ -1,13 +1,13 @@
 - if controller_name != 'sessions'
-  = link_to t('devise.shared.links.sign_in'), new_session_path(resource_name)
+  = link_to t('devise.shared.links.sign_in'), new_user_session_path
   %br
 
 - if devise_mapping.registerable? && controller_name != 'registrations'
-  = link_to t('devise.shared.links.sign_up'), new_registration_path(resource_name)
+  = link_to t('devise.shared.links.sign_up'), new_user_registration_path
   %br
 
 - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
-  = link_to t('devise.shared.links.forgot_your_password'), new_password_path(resource_name)
+  = link_to t('devise.shared.links.forgot_your_password'), new_user_password_path
   %br
 
 - if devise_mapping.confirmable? && controller_name != 'confirmations'
@@ -15,10 +15,10 @@
   %br
 
 - if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks'
-  = link_to t('devise.shared.links.didn_t_receive_unlock_instructions'), new_user_unlock_path(resource_name)
+  = link_to t('devise.shared.links.didn_t_receive_unlock_instructions'), new_user_unlock_path
   %br
 
 - if devise_mapping.omniauthable?
-  - resource_class.omniauth_providers.each do |provider|
-    = link_to t('devise.shared.links.sign_in_with_provider', provider: provider.to_s.titleize), omniauth_authorize_path(resource_name, provider)
+  - User.omniauth_providers.each do |provider|
+    = link_to t('devise.shared.links.sign_in_with_provider', provider: provider.to_s.titleize), omniauth_authorize_path(:user, provider)
     %br
