Add surprise mode to tournaments

--- a/app/views/tournaments/show.html+mobile.haml
+++ b/app/views/tournaments/show.html+mobile.haml
@@ -4,7 +4,11 @@
   = render 'tournaments/header'
   = render 'tournaments/navbar'
 
-  .content-block
-    .scoreboard
-      .scoreboard-scroll
-        = render 'scoreboard'
+  - if @tournament.surprise?
+    %h1.text-muted.text-center
+      🙅 Let it be Surprise
+  - else
+    .content-block
+      .scoreboard
+        .scoreboard-scroll
+          = render 'scoreboard'
