--- a/app/views/places/index.html.haml
+++ b/app/views/places/index.html.haml
@@ -1,11 +1,11 @@
 - provide :title, page_title(t('application.header.places'))
 
 .places{'data-controller': 'places--index',
-        'data-action': 'maps_api:ready@window->places--index#on_maps_ready '        + |
+        'data-action': 'maps_api:ready@window->places--index#onMapsReady '          + |
                        'maps_api:failed@window->places--index#on_maps_load_failed ' + |
-                       'ajax:before->places--index#before_request_preview '         + |
-                       'ajax:success->places--index#request_preview_success '       + |
-                       'ajax:error->places--index#request_preview_error ' }           |
+                       'ajax:before->places--index#beforeRequestPreview '           + |
+                       'ajax:success->places--index#requestPreviewSuccess '         + |
+                       'ajax:error->places--index#requestPreviewError ' }             |
 
   .places__sidebar{'data-target': 'places--index.sidebar'}
     = render 'list_with_search', link_to_preview: true
